[project]
name = "response-tracing"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click>=8.3.0",
    "openai>=2.6.1",
    "pangea-sdk>=6.8.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]
